# nvql

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-script/pqxx/: CMakeLists.txt
cmake/: ProjectCXX.cmake
src/: main.cc
src/core/: CMakeLists.txt
src/core/src/nvserv/: declare.h  exceptions.h  global.h  global_macro.h
src/core/src/nvserv/headers/: absl_thread.h
src/core/src/nvserv/storages/: cluster_config.h  cluster_config_list.h  column.h  config.h  connection.cc  connection.h  connection_pool.h  connection_pool_config.cc  connection_pool_config.h  declare.h  exceptions.h  execution_result.cc  execution_result.h  mapper.h  prepared_statement_manager.h  row_result.h  row_result_iterator.h  storage_server.h  transaction.cc  transaction.h
src/core/src/nvserv/storages/parameters/: param.h
src/core/src/nvserv/threads/: event_loop_executor.cc  event_loop_executor.h
src/postgres/: CMakeLists.txt
src/postgres/src/nvserv/storages/postgres/: declare.h  pg_cluster_config.cc  pg_cluster_config.h  pg_column.cc  pg_column.h  pg_connection.cc  pg_connection.h  pg_execution_result.cc  pg_execution_result.h  pg_helper.cc  pg_helper.h  pg_pool.h  pg_row_result.cc  pg_row_result.h  pg_row_result_iterator.cc  pg_row_result_iterator.h  pg_server.cc  pg_server.h  pg_storage_config.cc  pg_storage_config.h  pg_transaction.cc  pg_transaction.h
src/storage/: CMakeLists.txt
src/storage/src/nvserv/storages/: cluster_config.cc  cluster_config_list.cc  cluster_config_list.h  column.cc  column.h  connection.h  connection_pool.cc  connection_pool.h  connection_pool_config.cc  connection_pool_config.h  declare.h  exceptions.cc  exceptions.h  execution_result.h  prepared_statement_manager.cc  prepared_statement_manager.h  row_result.cc  row_result.h  row_result_iterator.cc  storage_config.cc  storage_config.h  storage_server.cc  storage_server.cc.bak  storage_server.h  transaction.h
src/storage/src/nvserv/storages/parameters/: param.cc
